--- a/src/pages/Home/home.css
+++ b/src/pages/Home/home.css
@@ -46,7 +46,7 @@
 
 .lista-filmes img{
     width: 226px;
-    max-height: 340px;
+    height: 100%;
     display: block;
     border-top-left-radius: 8px;
     border-top-right-radius: 8px;
