--- a/src/pages/Home/home.css
+++ b/src/pages/Home/home.css
@@ -50,7 +50,7 @@
     display: block;
     border-top-left-radius: 8px;
     border-top-right-radius: 8px;
-    object-fit: contain;
+    object-fit: cover;
     margin: auto;
 }
 
